import java.util.List;

public class Main {
    public static void main(String[] args) {


        Login.showLoginMenu(); //Her starter login programmet
        MenuSystem.option(); // Her vises Menu Systemet

    }
}